# lib/api-spec/openapi.yaml
@@ -506,6 +506,8 @@ components:
           type: number
         usdToEgp:
           type: number
+        usdToJod:
+          type: number
         whatsappNumber:
           type: string
         moneyTransferCurrencies:
@@ -527,6 +529,7 @@ components:
         - usdToIqd
         - usdToSar
         - usdToEgp
+        - usdToJod
         - whatsappNumber
         - moneyTransferCurrencies
         - welcomeMessage
@@ -556,6 +559,8 @@ components:
         usdToSar:
           type: number
         usdToEgp:
+          type: number
+        usdToJod:
           type: number
         whatsappNumber:
           type: string
