# lib/db/src/schema/settings.ts
@@ -15,6 +15,7 @@ export const settingsTable = pgTable("settings", {
   usdToIqd: doublePrecision("usd_to_iqd").notNull().default(1310.0),
   usdToSar: doublePrecision("usd_to_sar").notNull().default(3.75),
   usdToEgp: doublePrecision("usd_to_egp").notNull().default(50.9),
+  usdToJod: doublePrecision("usd_to_jod").notNull().default(0.71),
   whatsappNumber: text("whatsapp_number").notNull().default("00905378221375"),
   moneyTransferCurrencies: text("money_transfer_currencies").notNull().default("دولار,ليرة تركية,يورو,سوري"),
   welcomeMessage: text("welcome_message").notNull().default("تنبيه هام: قبل إرسال أي مبلغ، تأكد دائماً من بيانات طريقة الدفع الحالية في صفحة (إضافة رصيد). معلومات الدفع قد تتغير في أي وقت، لا ترسل لأي بيانات قديمة محفوظة عندك."),
